--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "pkgroll",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "vitest"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
+    "@types/supertest": "^6.0.2",
     "pkgroll": "^2.5.1",
+    "supertest": "^7.0.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.8"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
